adjust color schema

--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -21,7 +21,7 @@
   --primary: #00a2d3;
   --secondary: #26547c;
   --accent: #ffd166;
-  --background: #f5f7f5;
+  --white: #f5f7f5;
   --lightgray: #bfbfbf;
   --medgray: #a1a1a1;
 
