--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -29,6 +29,9 @@
   --s: 8px;
   --m: 16px;
   --l: 24px;
+
+  --primaryFont: "Roboto Mono", sans-serif;
+  --secondaryFont: "Source Sans Pro", sans-serif;
 }
 
 body {
@@ -40,6 +43,9 @@ body {
 
 button {
   font-family: "Source Sans Pro", sans-serif;
+  border: 0;
+  border-radius: var(--s);
+  padding: var(--s) var(--m);
 }
 
 form {
