--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -50,6 +50,11 @@ form {
   display: flex;
 }
 
+.u-flex-between {
+  display: flex;
+  justify-content: space-between;
+}
+
 .u-flexColumn {
   display: flex;
   flex-direction: column;
