change lightgray color

--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -22,7 +22,7 @@
   --secondary: #26547c;
   --accent: #ffd166;
   --white: #f5f7f5;
-  --lightgray: #bfbfbf;
+  --lightgray: #ededed;
   --medgray: #a1a1a1;
 
   --xs: 4px;
