--- a/client/src/components/modules/VenueCard.css
+++ b/client/src/components/modules/VenueCard.css
@@ -2,4 +2,16 @@
   background-color: var(--lightgray);
   border-radius: var(--s);
   color: var(--secondary);
+  font-size: var(--l);
+  padding: 20px;
+  margin: 10px;
+  width: 150px;
+}
+
+.VenueCard-button {
+  padding: var(--s) var(--l);
+  border: 0;
+  background-color: var(--secondary);
+  color: var(--white);
+  margin: 10px;
 }
