--- a/client/src/components/modules/VenueCard.css
+++ b/client/src/components/modules/VenueCard.css
@@ -5,7 +5,7 @@
   font-size: var(--l);
   padding: 20px;
   margin: 10px;
-  width: 150px;
+  width: 20%;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -14,5 +14,5 @@
   border: 0;
   background-color: var(--secondary);
   color: var(--white);
-  margin: 10px;
+  margin: 20px 20px 10px 20px;
 }
