--- a/client/src/components/modules/FoodItem.css
+++ b/client/src/components/modules/FoodItem.css
@@ -5,7 +5,7 @@
 .FoodItem-container {
   background-color: var(--lightgray);
   color: var(--secondary);
-  border-radius: var(--s) var(--s) 0 0;
+  border-radius: var(--xs) var(--xs) 0 0;
   margin: 0 0 10px 0;
   padding: 10px;
   height: 20px;
@@ -14,10 +14,16 @@
 .FoodItem-addReview {
   color: var(--secondary);
   background-color: var(--lightgray);
-  border-radius: 0 0 var(--s) var(--s);
+  border-radius: 0 0 var(--xs) var(--xs);
   margin: 0 0 10px 0;
+  padding: 10px;
 }
 
 .FoodItem-reviewList {
   padding: 10px;
+}
+
+.FoodItem-largeContainer {
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+  border-radius: var(--xs);
 }
