--- a/client/src/components/modules/VenueSelector.css
+++ b/client/src/components/modules/VenueSelector.css
@@ -4,14 +4,17 @@
   font-size: var(--l);
   border-radius: var(--s);
   padding: 5px 20px;
-  height: 30px;
-}
-
-.VenueSelector-downArrow {
-  font-size: var(--m);
+  height: 5%;
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+  font-family: var(--primaryFont);
+  margin: 0 20px 10px 0;
 }
 
 .VenueSelector-pageLoading {
   font-size: var(--m);
   color: var(--secondary);
+}
+
+.VenueSelector-option {
+  font-size: var(--m);
 }
