--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -39,6 +39,7 @@ body {
   padding: 0;
   font-family: "Roboto Mono", sans-serif;
   font-weight: 300;
+  background-color: var(--white);
 }
 
 button {
