touch up home page

--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -29,6 +29,7 @@
   --s: 8px;
   --m: 16px;
   --l: 24px;
+  --xl: 32px;
 
   --primaryFont: "Roboto Mono", sans-serif;
   --secondaryFont: "Source Sans Pro", sans-serif;
