--- a/client/src/components/modules/VenueCard.css
+++ b/client/src/components/modules/VenueCard.css
@@ -2,17 +2,26 @@
   background-color: var(--lightgray);
   border-radius: var(--s);
   color: var(--secondary);
-  font-size: var(--l);
-  padding: 20px;
+  padding: var(--xl) var(--l);
   margin: 10px;
-  width: 20%;
+  width: 25%;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.VenueCard-title {
+  font-size: var(--xl);
+}
+
+.VenueCard-ratingBox {
+  padding: var(--s);
+  margin: var(--m) 0;
+}
+
 .VenueCard-button {
+  font-size: var(--m);
   padding: var(--s) var(--l);
   border: 0;
   background-color: var(--secondary);
   color: var(--white);
-  margin: 20px 20px 10px 20px;
+  margin: 10px 20px;
 }
