--- a/client/src/components/modules/FoodItem.css
+++ b/client/src/components/modules/FoodItem.css
@@ -6,24 +6,33 @@
   background-color: var(--lightgray);
   color: var(--secondary);
   border-radius: var(--xs) var(--xs) 0 0;
-  margin: 0 0 10px 0;
-  padding: 10px;
-  height: 20px;
+  margin: 0 0 var(--s) 0;
+  padding: var(--s);
+  height: var(--l);
 }
 
 .FoodItem-addReview {
   color: var(--secondary);
   background-color: var(--lightgray);
   border-radius: 0 0 var(--xs) var(--xs);
-  margin: 0 0 10px 0;
-  padding: 10px;
+  margin: 0 0 var(--s) 0;
+  padding: var(--s);
 }
 
 .FoodItem-reviewList {
-  padding: 10px;
+  padding: var(--s);
 }
 
 .FoodItem-largeContainer {
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
   border-radius: var(--xs);
+}
+
+.FoodItem-newReview {
+  margin: 0 0 var(--s) 0;
+  background-color: var(--lightgray);
+  font-size: var(--m);
+  font-family: var(--secondaryFont);
+  color: var(--secondary);
+  padding: var(--s);
 }
