--- a/client/src/components/modules/NewReview.css
+++ b/client/src/components/modules/NewReview.css
@@ -9,6 +9,7 @@ textarea {
   width: 100%;
   font-family: var(--secondaryFont);
   background-color: var(--white);
+  padding: var(--xs);
 }
 
 .NewReview-textarea {
@@ -21,25 +22,27 @@ textarea {
 
 .NewReview-flexRight {
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
 }
 
 .NewReview-cancel {
   background-color: var(--lightgray);
   color: var(--secondary);
-  border-width: 2px;
+  border-width: 1px;
   border-color: var(--secondary);
   padding: var(--xs) var(--s);
   margin: var(--xs) var(--s);
   border-style: solid;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 }
 
 .NewReview-submit {
   background-color: var(--secondary);
   color: var(--white);
   padding: var(--xs) var(--s);
-  border-width: 2px;
+  border-width: 1px;
   border-color: var(--secondary);
   margin: var(--xs) 0;
   border-style: solid;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
 }
