--- a/client/src/components/modules/Review.css
+++ b/client/src/components/modules/Review.css
@@ -1,5 +1,12 @@
-.Review-userName {
+.Review-userLink {
+  color: var(--secondary);
+  font-family: var(--secondary);
   font-size: var(--m);
+  text-decoration: none;
+}
+
+.Review-userLink:hover {
+  opacity: 0.8;
 }
 
 .Review-container {
