--- a/client/src/components/modules/FilterBox.css
+++ b/client/src/components/modules/FilterBox.css
@@ -22,17 +22,23 @@
   font-size: var(--m);
   background-color: var(--white);
   color: var(--medgray);
+  border: 0;
   border-radius: var(--s);
-  padding: 5px 5px;
+  padding: 5px;
   height: 20px;
-  width: 105px;
+  width: 175px;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
   font-family: var(--primaryFont);
   margin: var(--s) 0;
+  margin: var(--s);
 }
 
 .FilterBox-orderBy {
-  margin: var(--s) 0;
+  margin: var(--xs) 0;
+}
+
+.FilterBox-ordering {
+  margin: 0 0 var(--s) 0;
 }
 
 .FilterBox-dropdown {
