--- a/client/src/components/modules/FilterBox.css
+++ b/client/src/components/modules/FilterBox.css
@@ -42,13 +42,14 @@
 }
 
 .FilterBox-dropdown {
+  text-align: center;
   font-size: var(--m);
   background-color: var(--medgray);
   color: var(--lightgray);
   border-radius: var(--s);
-  padding: 5px 20px;
-  height: 30px;
-  width: 120px;
+  padding: 5px;
+  height: 35px;
+  width: 175px;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
   font-family: var(--primaryFont);
   display: inline-block;
