--- a/client/src/components/modules/NewReview.css
+++ b/client/src/components/modules/NewReview.css
@@ -11,6 +11,8 @@ textarea {
   font-size: var(--m);
   background-color: var(--white);
   padding: var(--xs);
+  border-color: transparent;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 }
 
 .NewReview-textarea {
