--- a/client/src/components/modules/FilterBox.css
+++ b/client/src/components/modules/FilterBox.css
@@ -3,10 +3,10 @@
   color: var(--secondary);
   border-radius: var(--s);
   padding: 5px 20px;
-  width: 200px;
+  width: auto;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
   font-family: var(--primaryFont);
-  margin: 0 20px 10px 0;
+  margin: auto;
 }
 
 .FilterBox-title {
