--- a/client/src/components/modules/UserReview.css
+++ b/client/src/components/modules/UserReview.css
@@ -20,4 +20,6 @@
   font-family: var(--secondaryFont);
 
   text-align: left;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  border-radius: var(--s);
 }
