--- a/client/src/components/modules/UserReview.css
+++ b/client/src/components/modules/UserReview.css
@@ -18,6 +18,7 @@
 
   /* font */
   font-family: var(--secondaryFont);
+  color: var(--secondary);
 
   text-align: left;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
