--- a/client/src/components/modules/ProfileFilterBox.css
+++ b/client/src/components/modules/ProfileFilterBox.css
@@ -22,13 +22,15 @@
   font-size: var(--m);
   background-color: var(--white);
   color: var(--medgray);
+  border: 0;
   border-radius: var(--s);
-  padding: 5px 5px;
+  padding: 5px;
   height: 20px;
-  width: 105px;
+  width: 175px;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
   font-family: var(--primaryFont);
   margin: var(--s) 0;
+  margin: var(--s);
 }
 
 .ProfileFilterBox-orderBy {
