--- a/client/src/components/modules/Navbar.css
+++ b/client/src/components/modules/Navbar.css
@@ -39,7 +39,7 @@
   /* make it a circle */
   border-radius: 50%;
 
-  /* Centering on image`s center*/
+  /* Centering on image's center*/
   background-position-y: center;
   background-position-x: center;
 
@@ -52,7 +52,7 @@
 
   margin-top: 2.5px;
 
-  /* Centering on image`s center*/
+  /* Centering on image's center*/
   background-position-y: center;
   background-position-x: center;
 
