--- a/client/src/components/modules/FilterBox.css
+++ b/client/src/components/modules/FilterBox.css
@@ -2,7 +2,7 @@
   background-color: var(--lightgray);
   color: var(--secondary);
   border-radius: var(--s);
-  padding: 5px 20px;
+  padding: 15px;
   width: auto;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
   font-family: var(--primaryFont);
@@ -30,7 +30,6 @@
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
   font-family: var(--primaryFont);
   margin: var(--s) 0;
-  margin: var(--s);
 }
 
 .FilterBox-orderBy {
