--- a/client/src/components/modules/ProfileFilterBox.css
+++ b/client/src/components/modules/ProfileFilterBox.css
@@ -1,10 +1,10 @@
 .ProfileFilterBox-card {
-  /* background-color: var(--lightgray); */
+  background-color: var(--lightgray);
   color: var(--secondary);
   border-radius: var(--s);
-  padding: 5px 20px;
+  padding: 15px;
   width: auto;
-  /* box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25); */
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
   font-family: var(--primaryFont);
   margin: auto;
 }
@@ -29,23 +29,22 @@
   width: 175px;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
   font-family: var(--primaryFont);
-  margin: var(--s) 0;
   margin: var(--s);
-}
-
-.ProfileFilterBox-orderBy {
-  margin: var(--s) 0;
 }
 
 .ProfileFilterBox-dropdown {
   font-size: var(--m);
   background-color: var(--medgray);
-  color: var(--lightgray);
+  color: var(--white);
   border-radius: var(--s);
-  padding: 5px 20px;
-  height: 30px;
-  width: 120px;
+  padding: 5px;
+  height: 35px;
+  width: 190px;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
   font-family: var(--primaryFont);
   display: inline-block;
+}
+
+.ProfileFilterBox-orderBy {
+  margin: var(--s) 0;
 }
