--- a/client/src/components/pages/Profile.css
+++ b/client/src/components/pages/Profile.css
@@ -58,29 +58,13 @@
 }
 
 .Profile-reviews {
-  /* make it responsive */
-  width: auto;
-  height: 0;
-  display: block;
-  /* div height to be the same as width*/
-  padding: 0;
-
-  /* Centering on image`s center*/
-  background-position-y: center;
-  background-position-x: center;
-  background-repeat: no-repeat;
-
-  /* it makes the clue thing, takes smaller dimension to fill div */
-  background-size: cover;
-
-  /* it is optional, for making this div centered in parent*/
-  margin: 0 auto;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  width: 75%;
 }
 
 .Profile-reviewContent {
   padding: 0px 15%;
+}
+
+.Profile-leftColumn {
+  margin: 10px 30px;
 }
