--- a/client/src/components/modules/Navbar.css
+++ b/client/src/components/modules/Navbar.css
@@ -56,7 +56,7 @@
   background-position-y: center;
   background-position-x: center;
 
-  background-image: url("../../public/logo.jpg");
+  background-image: url("../../public/logo.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
