--- a/client/src/components/modules/VenueCard.css
+++ b/client/src/components/modules/VenueCard.css
@@ -8,6 +8,12 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+@media (max-width: 1024px) {
+  .VenueCard-container {
+    width: 100%;
+  }
+}
+
 .VenueCard-title {
   font-size: var(--xl);
 }
