--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -5,6 +5,6 @@
   font-size: var(--l);
   border-radius: var(--s);
   padding: var(--s);
-  margin: 20px 100px;
+  margin: 20px 10%;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 }
