--- a/client/src/components/modules/VenueCard.css
+++ b/client/src/components/modules/VenueCard.css
@@ -8,12 +8,6 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-@media (max-width: 1024px) {
-  .VenueCard-container {
-    width: 100%;
-  }
-}
-
 .VenueCard-title {
   font-size: var(--xl);
 }
@@ -30,4 +24,19 @@
   background-color: var(--secondary);
   color: var(--white);
   margin: 10px 20px;
+}
+
+@media (max-width: 1024px) {
+  .VenueCard-container {
+    width: 100%;
+  }
+  .VenueCard-title {
+    font-size: 3rem;
+  }
+  .VenueCard-ratingBox {
+    font-size: 2rem;
+  }
+  .VenueCard-button {
+    font-size: 1.5rem;
+  }
 }
