--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -8,3 +8,9 @@
   margin: 20px 10%;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 }
+
+@media (max-width: 1024px) {
+  .Home-dateCard {
+    font-size: 2.5rem;
+  }
+}
