--- a/client/src/components/modules/FoodItem.css
+++ b/client/src/components/modules/FoodItem.css
@@ -17,7 +17,7 @@
 }
 
 .FoodItem-addReview {
-  color: var(--secondary);
+  color: var(--primary);
   background-color: var(--lightgray);
   border-radius: 0 0 var(--xs) var(--xs);
   margin: 0 0 var(--s) 0;
