--- a/client/src/components/modules/UserReviewList.css
+++ b/client/src/components/modules/UserReviewList.css
@@ -1,5 +1,5 @@
-.UserReviewList-empty {
+.UserReviewList-pageLoading {
   font-family: var(--secondaryFont);
+  font-size: var(--m);
   color: var(--secondary);
-  padding: 0 0 var(--s) var(--s);
 }
