--- a/client/src/components/modules/FilterBox.css
+++ b/client/src/components/modules/FilterBox.css
@@ -53,3 +53,25 @@
   font-family: var(--primaryFont);
   display: inline-block;
 }
+
+@media (max-width: 1024px) {
+  .FilterBox-dropdown {
+    font-size: 2rem;
+    height: 5%;
+    width: 35%;
+  }
+  .FilterBox-search {
+    font-size: 2rem;
+    height: 5%;
+    width: 35%;
+  }
+  .FilterBox-orderBy {
+    font-size: 2rem;
+  }
+  .FilterBox-rating {
+    font-size: 2rem;
+  }
+  .FilterBox-title {
+    font-size: 2.5rem;
+  }
+}
