--- a/client/src/components/modules/NewReview.css
+++ b/client/src/components/modules/NewReview.css
@@ -47,3 +47,18 @@ textarea {
   border-style: solid;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
 }
+
+@media (max-width: 1024px) {
+  .NewReview-container {
+    font-size: 2rem;
+  }
+  textarea {
+    font-size: 2rem;
+  }
+  .NewReview-cancel {
+    font-size: 2rem;
+  }
+  .NewReview-submit {
+    font-size: 2rem;
+  }
+}
