--- a/client/src/components/modules/FilterBox.css
+++ b/client/src/components/modules/FilterBox.css
@@ -61,6 +61,7 @@
   background-color: var(--secondary);
   color: var(--white);
   margin: 10px 20px;
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
 }
 
 @media (max-width: 1024px) {
