--- a/client/src/components/modules/ProfileFilterBox.css
+++ b/client/src/components/modules/ProfileFilterBox.css
@@ -49,6 +49,10 @@
   margin: var(--s) 0;
 }
 
+.ProfileFilterBox-reset {
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+}
+
 @media (max-width: 1024px) {
   .ProfileFilterBox-card {
     width: 100%;
