--- a/client/src/components/modules/UserReviewList.css
+++ b/client/src/components/modules/UserReviewList.css
@@ -3,3 +3,9 @@
   font-size: var(--m);
   color: var(--secondary);
 }
+
+@media (max-width: 1024px) {
+  .UserReviewList-noReviews {
+    font-size: 2rem;
+  }
+}
