--- a/client/src/components/modules/ProfileFilterBox.css
+++ b/client/src/components/modules/ProfileFilterBox.css
@@ -50,6 +50,12 @@
 }
 
 .ProfileFilterBox-reset {
+  font-size: var(--m);
+  padding: var(--s) var(--l);
+  border: 0;
+  background-color: var(--secondary);
+  color: var(--white);
+  margin: 10px 20px;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
 }
 
@@ -66,5 +72,14 @@
     font-size: 2rem;
     height: auto;
     width: 300px;
+  }
+  .ProfileFilterBox-minReview {
+    font-size: 2rem;
+  }
+  .ProfileFilterBox-title {
+    font-size: 2.5rem;
+  }
+  .ProfileFilterBox-reset {
+    font-size: 2rem;
   }
 }
