--- a/client/src/components/modules/UserReview.css
+++ b/client/src/components/modules/UserReview.css
@@ -24,3 +24,10 @@
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   border-radius: var(--s);
 }
+
+.UserReview-userLink {
+  color: var(--secondary);
+  font-family: var(--secondary);
+  font-size: var(--m);
+  text-decoration: none;
+}
