--- a/client/src/components/modules/VenueCard.css
+++ b/client/src/components/modules/VenueCard.css
@@ -9,10 +9,47 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.VenueCard-button {
+.VenueCard-title {
+  font-size: var(--xl);
+}
+
+.VenueCard-ratingBox {
+  padding: var(--s);
+  margin: var(--m) 0;
+}
+
+.VenueCard-buttonActive {
+  font-size: var(--m);
   padding: var(--s) var(--l);
   border: 0;
   background-color: var(--secondary);
   color: var(--white);
-  margin: 20px 20px 10px 20px;
+  margin: 10px 20px;
+}
+
+.VenueCard-buttonInactive {
+  font-size: var(--m);
+  padding: var(--s) var(--l);
+  border: 0;
+  background-color: var(--darkgray);
+  color: var(--white);
+  margin: 10px 20px;
+}
+
+@media (max-width: 1024px) {
+  .VenueCard-container {
+    width: 100%;
+  }
+  .VenueCard-title {
+    font-size: 3rem;
+  }
+  .VenueCard-ratingBox {
+    font-size: 2rem;
+  }
+  .VenueCard-buttonActive {
+    font-size: 2rem;
+  }
+  .VenueCard-buttonInactive {
+    font-size: 2rem;
+  }
 }
